# EnergyHouseCostModel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  energetic_components.py  energy_cost.py  house_energy_cost.py  setup.cfg  tox.ini
examples/: 3_sample_the_model.py  6_run_sensitivity_analysis.py  6_run_sensitivity_analysis_morris.py  house_energy_cost.py  plot_2_define_the_uncertain_space.py  plot_4_compute_output_statistics.py  plot_5_build_a_surrogate.py
requirements/: check.txt
src/EnergyHouseCostModel/: energetic_components.py  energy_cost.py  lib_energy_cost.py  uncertain.py
src/energy_house_cost/: energetic_components.py  energy_cost.py  energy_item.py  energy_scenario.py  lib_energy_cost.py  uncertain.py
src/energy_house_cost/database/: __init__.py  electricity_cost.json  energy_scenario.py  gas_cost.json  lib_components.py  mock.json  mock_energy_cost_linear.json  mock_energy_cost_power.json  mock_energy_cost_user_points.json
tests/: test_component.py  test_energy_cost.py
