[metadata]
name = EnergyHouseCostModel
author = Sebastien Bocquet
url = https://github.com/SebastienBocquet/EnergyHouseCostModel
description = Computes the cost of energy component choice over a given time period.
long_description = file: README.md
license = MIT licence

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.7, <3.11
install_requires =
    pandas==1.5.0
    numpy==1.23.3
    scipy==1.9.1
    matplotlib==3.6.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

doc =
    tabulate
    sphinx == 4.4.0
    sphinx-autodoc-typehints
    sphinx_rtd_theme
    graphviz
    sphinx-math-dollar
    sphinxcontrib-bibtex