[metadata]
name = energy_house_cost
author = Sebastien Bocquet
url = https://github.com/SebastienBocquet/EnergyHouseCostModel
description = Computes the cost of energy component choice over a given time period.
long_description = file: README.md
license = MIT licence

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.7, <3.11
install_requires =
#    pandas==1.5.0
#    numpy==1.23.3
#    scipy==1.9.1
#    matplotlib==3.6.0
    gemseo[all]==4.3.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

doc =
    tabulate
    sphinx == 4.4.0
    sphinx-autodoc-typehints
    sphinx_rtd_theme
    graphviz
    sphinx-math-dollar
    sphinxcontrib-bibtex

[coverage:run]
plugins = covdefaults
source = energy_house_cost

[coverage:report]
# Override covdefaults.
fail_under = 1

[flake8]
# See http://www.pydocstyle.org/en/latest/error_codes.html for more details.
# https://github.com/PyCQA/flake8-bugbear#how-to-enable-opinionated-warnings
ignore =
    E501
    # no docstring for standard and private methods
    D105
    E203
    W503
    # TODO: remove if we decide to allow this API change.
    N818
    # ignore missing docstrings
    D100, D102, D107, D101, D104, D103
    # allow prints
    T201, T203
select = B,C,D,E,F,G,N,T,W,B950, D103
# settings for compatibility with black, see
# https://github.com/psf/black/blob/master/docs/compatible_configs.md#flake8
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=bugbear#line-length
max-line-length = 88
docstring-convention = google
per-file-ignores =
    # ignore docstring that have not yet be converted to the google style
    tests/*.py:D
    # also ignore print statements violations in the examples and tutorials
    examples/*.py:B,E,T,D
